# CPP-Playground

./: main.cpp  math_func.cpp  math_func.h  playground
Text Adventure/: CMakeLists.txt  enemy.cpp  enemy.h  play.cpp  player.cpp
Text Adventure/include/: attack.h  enemy.h  player.h
Text Adventure/src/: enemy.cpp  play.cpp  player.cpp
